# notebooklm-chunker

./: .gitignore  AGENTS.md  CHANGELOG.md  CLI.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  desktop-release.yml  publish.yml
analyze/: INSTRUCTIONS.md
analyze/design/authentication_account_gateway/: code.html
analyze/design/dashboard-sidebar/: code.html
analyze/design/error_recovery_quota_management/: code.html
analyze/design/history_recent_projects/: code.html
analyze/design/refinement_editor_preview/: code.html
analyze/design/source_selection_empty_state/: code.html
analyze/design/structure_chunking_strategy/: code.html
analyze/design/studio_generation_quota_management/: code.html
analyze/design/sync_notebooklm_integration/: code.html
analyze/design/system_health_diagnostics/: code.html
analyze/stories/: 00-authentication-gateway.md  01-source-selection.md  02-chunk-settings.md  03-preview-refinement.md  04-notebooklm-integration.md  05-studio-generation.md  06-dashboard-history.md  07-system-diagnostics.md  08-error-recovery.md  09-dashboard-sidebar.md
desktop/: README.md  package-lock.json  package.json
desktop/renderer/: app.js  artifact-preview.css  index.html  logs.css  project-utils.js  styles.css
desktop/renderer/modules/: artifacts.js  chunks.js  dashboard.js  dom.js  history.js  navigation.js  prompts.js  settings.js  setup.js  state.js  studio.js  sync.js
desktop/src/: main.js  preload.js
desktop/tests/: project-utils.test.js
examples/: multi-chunk-demo.md  sample.md
examples/workflows/: ddd-quickly-demo.toml  learning-kit.toml  markdown.toml  pdf.toml  per-chunk-report-and-slides.toml
examples/workflows/studios/: audio.toml  data-table.toml  flashcards.toml  infographic.toml  mind-map.toml  quiz.toml  report.toml  slide-deck.toml  video.toml
notebooklm_chunker/: __init__.py  __main__.py  anki.py  chunker.py  cli.py  config.py  doctor.py  exporters.py  models.py  parsers.py  run_state.py
notebooklm_chunker/uploaders/: __init__.py  notebooklm_py.py
scripts/: build_sidecar.sh  release_desktop_local.sh  release_prep.sh  sidecar_entry.py
tests/: test_anki.py  test_chunker.py  test_cli.py  test_config.py  test_doctor.py  test_exporters.py  test_inspect_tree.py  test_parsers.py  test_run_state.py  test_uploader.py
