[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-chunker"
version = "0.2.0"
description = "Turn long PDFs into chunked NotebookLM workflows with Studio outputs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "cmlonder" }]
keywords = ["notebooklm", "pdf", "chunking", "study-tools", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]
dependencies = ["notebooklm-py[browser]>=0.3.3", "pymupdf>=1.24.0"]

[project.urls]
Homepage = "https://github.com/cmlonder/notebooklm-chunker"
Repository = "https://github.com/cmlonder/notebooklm-chunker"
Issues = "https://github.com/cmlonder/notebooklm-chunker/issues"

[project.optional-dependencies]
dev = ["build>=1.2.2", "twine>=5.1.1"]

[project.scripts]
nblm = "notebooklm_chunker.cli:main"

[tool.setuptools.packages.find]
include = ["notebooklm_chunker*"]
